--- a/TodoWebApp/Web.config
+++ b/TodoWebApp/Web.config
@@ -41,6 +41,9 @@
         <add value="index.html" />
       </files>
     </defaultDocument>
+    <staticContent>
+      <mimeMap fileExtension=".woff" mimeType="font/x-woff" />
+    </staticContent>
     <validation validateIntegratedModeConfiguration="false" />
     <modules runAllManagedModulesForAllRequests="true" />
     <handlers>
