Fixed mime type mappings

--- a/TodoWebApp/Web.config
+++ b/TodoWebApp/Web.config
@@ -42,6 +42,7 @@
       </files>
     </defaultDocument>
     <staticContent>
+      <remove fileExtension=".woff" />
       <mimeMap fileExtension=".woff" mimeType="font/x-woff" />
     </staticContent>
     <validation validateIntegratedModeConfiguration="false" />
