--- a/TodoWebApp/Web.config
+++ b/TodoWebApp/Web.config
@@ -43,7 +43,9 @@
     </defaultDocument>
     <staticContent>
       <remove fileExtension=".woff" />
+      <remove fileExtension=".less" />
       <mimeMap fileExtension=".woff" mimeType="font/x-woff" />
+      <mimeMap fileExtension=".less" mimeType="text/css" />
     </staticContent>
     <validation validateIntegratedModeConfiguration="false" />
     <modules runAllManagedModulesForAllRequests="true" />
