Updated connection string

--- a/TodoWebApp/Web.config
+++ b/TodoWebApp/Web.config
@@ -14,6 +14,10 @@
     <add key="acsTrustedIssuerThumbprint" value="9243CE072FCD94A422ABDC9A2055769369E20CF3" />
     <add key="oauthSigningKey" value="SmIYVFTALZUZAzziWsa2HHt7PgNkmfbFldAmms1dr6U=" />
   </appSettings>
+  <connectionStrings>
+    <add name="TodoContext" connectionString="Data Source=|DataDirectory|Todo.DataAccess.TodoContext.sdf"
+         providerName="System.Data.SqlServerCe.4.0"/>
+  </connectionStrings>
   <system.identityModel>
     <identityConfiguration>
       <claimsAuthenticationManager type="Todo.Security.GlobalClaimsAuthenticationManager, Todo.Security" />
