--- a/TodoWebApp/Todo.WebApp.csproj
+++ b/TodoWebApp/Todo.WebApp.csproj
@@ -211,6 +211,7 @@
     <Content Include="www\images\splash2x.png" />
     <Content Include="www\js\libs\cordova-android.js" />
     <Content Include="www\js\libs\cordova-ios.js" />
+    <Content Include="www\js\libs\jquery.ba-tinypubsub.min.js" />
     <Content Include="www\js\libs\jquery.signalR-1.0.0-alpha2.js" />
     <Content Include="www\js\libs\jquery.signalR-1.0.0-alpha2.min.js" />
     <Content Include="www\images\loading-image.gif" />
