--- a/TodoWebApp/packages.config
+++ b/TodoWebApp/packages.config
@@ -30,8 +30,9 @@
   <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40" />
   <package id="Modernizr" version="2.5.3" targetFramework="net40" />
-  <package id="Newtonsoft.Json" version="4.5.10" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net45" />
   <package id="System.Spatial" version="5.1.0-rc2" targetFramework="net45" />
   <package id="Thinktecture.IdentityModel" version="2.2.1" targetFramework="net45" />
+  <package id="WebApiTestClient" version="0.0.3-alpha" targetFramework="net45" />
   <package id="WebGrease" version="1.1.0" targetFramework="net40" />
 </packages>
