--- a/TodoWebApp/packages.config
+++ b/TodoWebApp/packages.config
@@ -2,7 +2,8 @@
 <packages>
   <package id="Autofac" version="2.6.3.862" targetFramework="net40" />
   <package id="Autofac.WebApi" version="2.6.2.859" targetFramework="net40" />
-  <package id="EntityFramework" version="5.0.0" targetFramework="net45" />
+  <package id="EntityFramework" version="6.0.0-alpha2" targetFramework="net45" />
+  <package id="EntityFramework.SqlServerCompact" version="6.0.0-alpha2" targetFramework="net45" />
   <package id="jQuery" version="1.7.1.1" targetFramework="net40" />
   <package id="jQuery.UI.Combined" version="1.8.20.1" targetFramework="net40" />
   <package id="jQuery.Validation" version="1.9.0.1" targetFramework="net40" />
@@ -28,6 +29,7 @@
   <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="2.0.20710.0" targetFramework="net40" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="2.0.20710.0" targetFramework="net40" />
   <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net45" />
+  <package id="Microsoft.SqlServer.Compact" version="4.0.8876.1" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40" />
   <package id="Modernizr" version="2.5.3" targetFramework="net40" />
   <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net45" />
