--- a/TodoWebApp/packages.config
+++ b/TodoWebApp/packages.config
@@ -18,7 +18,7 @@
   <package id="Microsoft.AspNet.Web.Optimization" version="1.0.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.WebApi.Client" version="4.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Core" version="4.0.20710.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.HelpPage" version="0.2.0-alpha" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.HelpPage" version="0.2.0-alpha-121203" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.OData" version="0.2.0-alpha" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Tracing" version="0.2.0-alpha" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="4.0.20710.0" targetFramework="net45" />
@@ -35,6 +35,6 @@
   <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net45" />
   <package id="System.Spatial" version="5.1.0-rc2" targetFramework="net45" />
   <package id="Thinktecture.IdentityModel" version="2.2.1" targetFramework="net45" />
-  <package id="WebApiTestClient" version="0.0.3-alpha" targetFramework="net45" />
+  <package id="WebApiTestClient" version="0.0.4-alpha" targetFramework="net45" />
   <package id="WebGrease" version="1.1.0" targetFramework="net40" />
 </packages>
