--- a/Todo.WebApi/packages.config
+++ b/Todo.WebApi/packages.config
@@ -2,8 +2,7 @@
 <packages>
   <package id="AutoMapper" version="2.2.0" targetFramework="net45" />
   <package id="EntityFramework" version="6.0.0-alpha2" targetFramework="net45" />
-  <package id="Microsoft.AspNet.SignalR.Core" version="1.0.0-alpha2" targetFramework="net45" />
-  <package id="Microsoft.AspNet.SignalR.Hosting.Common" version="1.0.0-alpha2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.Core" version="1.0.0-rc2" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Client" version="4.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Core" version="4.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.OData" version="0.2.0-alpha" targetFramework="net45" />
@@ -14,7 +13,7 @@
   <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="1.7.0.3" targetFramework="net40" />
-  <package id="Newtonsoft.Json" version="4.5.10" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net45" />
   <package id="System.Spatial" version="5.1.0-rc2" targetFramework="net45" />
   <package id="Thinktecture.IdentityModel" version="2.2.1" targetFramework="net45" />
   <package id="WindowsAzure.Storage" version="1.7.0.0" targetFramework="net40" />
