--- a/TodoWebApp/packages.config
+++ b/TodoWebApp/packages.config
@@ -11,16 +11,16 @@
   <package id="Microsoft.AspNet.Providers" version="1.2" targetFramework="net40" />
   <package id="Microsoft.AspNet.Providers.Core" version="1.1" targetFramework="net40" />
   <package id="Microsoft.AspNet.Razor" version="2.0.20715.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.SignalR.Core" version="1.0.0-alpha2" targetFramework="net45" />
-  <package id="Microsoft.AspNet.SignalR.Hosting.AspNet" version="1.0.0-alpha2" targetFramework="net45" />
-  <package id="Microsoft.AspNet.SignalR.Hosting.Common" version="1.0.0-alpha2" targetFramework="net45" />
-  <package id="Microsoft.AspNet.SignalR.JS" version="1.0.0-alpha2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.Core" version="1.0.0-rc2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.JS" version="1.0.0-rc2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.Owin" version="1.0.0-rc2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.SystemWeb" version="1.0.0-rc2" targetFramework="net45" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.0.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.WebApi.Client" version="4.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Core" version="4.0.20710.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.HelpPage" version="0.2.0-alpha-121203" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.HelpPage" version="0.2.0-alpha" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.OData" version="0.2.0-alpha" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.Tracing" version="0.2.0-alpha" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.Tracing" version="0.3.0-rc" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="4.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="2.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.Data.Edm" version="5.1.0-rc2" targetFramework="net45" />
@@ -29,12 +29,14 @@
   <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="2.0.20710.0" targetFramework="net40" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="2.0.20710.0" targetFramework="net40" />
   <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net45" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="1.0.0-rc2" targetFramework="net45" />
   <package id="Microsoft.SqlServer.Compact" version="4.0.8876.1" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40" />
   <package id="Modernizr" version="2.5.3" targetFramework="net40" />
   <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net45" />
+  <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="System.Spatial" version="5.1.0-rc2" targetFramework="net45" />
   <package id="Thinktecture.IdentityModel" version="2.2.1" targetFramework="net45" />
-  <package id="WebApiTestClient" version="0.0.4-alpha" targetFramework="net45" />
+  <package id="WebApiTestClient" version="0.0.5-alpha" targetFramework="net45" />
   <package id="WebGrease" version="1.1.0" targetFramework="net40" />
 </packages>
