--- a/Todo.Interfaces/packages.config
+++ b/Todo.Interfaces/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="6.0.0-alpha2" targetFramework="net45" />
-  <package id="Microsoft.AspNet.SignalR.Core" version="1.0.0-rc2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.Core" version="1.0.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Client" version="4.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Core" version="4.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="4.0.20710.0" targetFramework="net45" />
