--- a/TodoWebApp/packages.config
+++ b/TodoWebApp/packages.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="angularjs" version="1.0.4" targetFramework="net45" />
-  <package id="Autofac" version="2.6.3.862" targetFramework="net40" />
-  <package id="Autofac.WebApi" version="2.6.2.859" targetFramework="net40" />
+  <package id="Autofac" version="3.0.1" targetFramework="net45" />
+  <package id="Autofac.WebApi" version="3.0.0" targetFramework="net45" />
   <package id="EntityFramework" version="6.0.0-alpha2" targetFramework="net45" />
   <package id="EntityFramework.SqlServerCompact" version="6.0.0-alpha2" targetFramework="net45" />
   <package id="jQuery" version="1.7.1.1" targetFramework="net40" />
@@ -12,32 +12,31 @@
   <package id="Microsoft.AspNet.Providers" version="1.2" targetFramework="net40" />
   <package id="Microsoft.AspNet.Providers.Core" version="1.1" targetFramework="net40" />
   <package id="Microsoft.AspNet.Razor" version="2.0.20715.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.SignalR.Core" version="1.0.0-rc2" targetFramework="net45" />
-  <package id="Microsoft.AspNet.SignalR.JS" version="1.0.0-rc2" targetFramework="net45" />
-  <package id="Microsoft.AspNet.SignalR.Owin" version="1.0.0-rc2" targetFramework="net45" />
-  <package id="Microsoft.AspNet.SignalR.SystemWeb" version="1.0.0-rc2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.Core" version="1.0.1" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.JS" version="1.0.1" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.Owin" version="1.0.1" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.SystemWeb" version="1.0.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.0.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.WebApi.Client" version="4.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Core" version="4.0.20710.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.HelpPage" version="0.2.0-alpha" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.OData" version="0.2.0-alpha" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.Tracing" version="0.3.0-rc" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.HelpPage" version="4.0.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.OData" version="4.0.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.Tracing" version="4.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="4.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="2.0.20710.0" targetFramework="net45" />
-  <package id="Microsoft.Data.Edm" version="5.1.0-rc2" targetFramework="net45" />
-  <package id="Microsoft.Data.OData" version="5.1.0-rc2" targetFramework="net45" />
-  <package id="Microsoft.Data.OData.Contrib" version="5.1.0.51016-rc2" targetFramework="net45" />
+  <package id="Microsoft.Data.Edm" version="5.2.0" targetFramework="net45" />
+  <package id="Microsoft.Data.OData" version="5.2.0" targetFramework="net45" />
   <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="2.0.20710.0" targetFramework="net40" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="2.0.20710.0" targetFramework="net40" />
   <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net45" />
-  <package id="Microsoft.Owin.Host.SystemWeb" version="1.0.0-rc2" targetFramework="net45" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="1.0.0" targetFramework="net45" />
   <package id="Microsoft.SqlServer.Compact" version="4.0.8876.1" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40" />
   <package id="Modernizr" version="2.5.3" targetFramework="net40" />
   <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net45" />
   <package id="OQuery.NET" version="1.0.0.4" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
-  <package id="System.Spatial" version="5.1.0-rc2" targetFramework="net45" />
+  <package id="System.Spatial" version="5.2.0" targetFramework="net45" />
   <package id="Thinktecture.IdentityModel" version="2.2.1" targetFramework="net45" />
   <package id="Twitter.Bootstrap" version="2.3.0" targetFramework="net45" />
   <package id="WebApiTestClient" version="0.0.5-alpha" targetFramework="net45" />
