--- a/Todo.Entities/Todo.Entities.csproj
+++ b/Todo.Entities/Todo.Entities.csproj
@@ -66,11 +66,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EntityBase.cs" />
+    <Compile Include="Link.cs" />
     <Compile Include="TodoItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Todo.Interfaces\Todo.Base.csproj">
+      <Project>{EA925276-3B76-4178-99AB-FEA985E6AA5B}</Project>
+      <Name>Todo.Base</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
