--- a/Todo.DataAccess/packages.config
+++ b/Todo.DataAccess/packages.config
@@ -9,4 +9,5 @@
   <package id="Microsoft.SqlServer.Compact" version="4.0.8876.1" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net45" />
+  <package id="T4Scaffolding.Core" version="1.0.0" targetFramework="net45" />
 </packages>
