--- a/Todo.Interfaces/Todo.Base.csproj
+++ b/Todo.Interfaces/Todo.Base.csproj
@@ -75,10 +75,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DbContextHelper.cs" />
+    <Compile Include="DataState.cs" />
     <Compile Include="GenericRepository.cs" />
     <Compile Include="HubApiController.cs" />
     <Compile Include="IGenericRepository.cs" />
+    <Compile Include="IDataWithState.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StateMapper.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
