--- a/Todo.Tests/Todo.Tests.csproj
+++ b/Todo.Tests/Todo.Tests.csproj
@@ -75,6 +75,7 @@
   <ItemGroup>
     <Compile Include="PicturesControllerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TodoRepositoryTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Todo.Contracts\Todo.Contracts.csproj">
