--- a/Todo.Tests/Todo.Tests.csproj
+++ b/Todo.Tests/Todo.Tests.csproj
@@ -90,7 +90,7 @@
       <Project>{e8868953-f0bb-4b1c-8ef4-006285c76ee0}</Project>
       <Name>Todo.Entities</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Todo.Interfaces\Todo.Base.csproj">
+    <ProjectReference Include="..\Todo.Base\Todo.Base.csproj">
       <Project>{ea925276-3b76-4178-99ab-fea985e6aa5b}</Project>
       <Name>Todo.Base</Name>
     </ProjectReference>
