--- a/Todo.DataAccess/Todo.DataAccess.csproj
+++ b/Todo.DataAccess/Todo.DataAccess.csproj
@@ -98,21 +98,30 @@
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Repositories.tt</DependentUpon>
+    </Compile>
     <Compile Include="TodoContext.cs" />
     <Compile Include="TodoRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+    <None Include="Repositories.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>Repositories.cs</LastGenOutput>
+    </None>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Todo.Base\Todo.Base.csproj">
+      <Project>{ea925276-3b76-4178-99ab-fea985e6aa5b}</Project>
+      <Name>Todo.Base</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Todo.Entities\Todo.Entities.csproj">
       <Project>{E8868953-F0BB-4B1C-8EF4-006285C76EE0}</Project>
       <Name>Todo.Entities</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Todo.Interfaces\Todo.Base.csproj">
-      <Project>{EA925276-3B76-4178-99AB-FEA985E6AA5B}</Project>
-      <Name>Todo.Base</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
@@ -125,6 +134,9 @@
     <EmbeddedResource Include="Migrations\201302151024210_Seed2.resx">
       <DependentUpon>201302151024210_Seed2.cs</DependentUpon>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
